[package]
name = "data_funnel"
version = "0.1.0"
edition = "2021"

[features]
default = []
directory = [
    "rusqlite",
    "rand",
    "rand_chacha",
]
remote = [
    "tokio",
    "tokio-rustls",
    "rustls",
    "rustls-pemfile",
    "chrono",
    "bytecon/tokio",
    "server_client_bytecon",
]
postgres = [
    "tokio",
    "tokio-postgres",
    "deadpool-postgres",
]

[dependencies]
thiserror = { version = "1.0.66" }
bytecon = { version = "0.1", features = ["rand"] }
futures = { version = "0.3" }
rusqlite = { version = "0.32.1", features = ["bundled"], optional = true }
rand = { version = "0.8.5", optional = true  }
rand_chacha = { version = "0.3", optional = true }
tokio = { version = "1", features = ["full"], optional = true  }
tokio-rustls = { version = "0.23", optional = true  }
rustls = { version = "0.21", optional = true  }
#zstd = { version = "0.11" }
#bytes = { version = "1.2" }
rustls-pemfile = { version = "1.0", optional = true  }
chrono = { version = "0.4.38", optional = true  }
tokio-postgres = { version = "0.7.12", optional = true }
deadpool-postgres = { version = "0.8", optional = true }
server_client_bytecon = { git = "ssh://git@github.com-ServerClientByteCon/AustinHellerRepo/ServerClientByteCon.git", optional = true}

[dev-dependencies]
tempfile = { version = "3.13.0" }
rcgen = { version = "0.13.1", features = ["pem"] }