[package]
name = "bytecon_data_store"
version = "0.1.0"
edition = "2021"
authors = ["Austin Heller"]
description = "A library for storing ByteConverter implementations conveniently."
readme = "README.md"
repository = "https://github.com/AustinHellerRepo/bytecon_data_store.git"
license = "MIT OR Apache-2.0"
keywords = ["networking", "database", "data", "storage", "distributed"]
categories = ["caching", "database-implementations"]

[features]
default = []
directory = [
    "rusqlite",
    "rand",
    "rand_chacha",
]
remote = [
    "tokio",
    "tokio-rustls",
    "rustls",
    "rustls-pemfile",
    "chrono",
    "bytecon/tokio",
    "server_client_bytecon",
    "cloneless_cow",
]
postgres = [
    "tokio",
    "tokio-postgres",
    "deadpool-postgres",
]

[dependencies]
thiserror = { version = "1.0.66" }
bytecon = { version = "0.1", features = ["rand"] }
futures = { version = "0.3" }
rusqlite = { version = "0.32.1", features = ["bundled"], optional = true }
rand = { version = "0.8.5", optional = true  }
rand_chacha = { version = "0.3", optional = true }
tokio = { version = "1", features = ["full"], optional = true  }
tokio-rustls = { version = "0.23", optional = true  }
rustls = { version = "0.21", optional = true  }
rustls-pemfile = { version = "1.0", optional = true  }
chrono = { version = "0.4.38", optional = true  }
tokio-postgres = { version = "0.7.12", optional = true }
deadpool-postgres = { version = "0.8", optional = true }
server_client_bytecon = { git = "ssh://git@github.com-ServerClientByteCon/AustinHellerRepo/ServerClientByteCon.git", optional = true}
cloneless_cow = { version = "0.1", optional = true }

[dev-dependencies]
tempfile = { version = "3.13.0" }
rcgen = { version = "0.13.1", features = ["pem"] }